--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,8 +8,9 @@ bind C-a send-prefix
 # Esc-delay
 set -sg escape-time 0
 
-# 256-colors
+# terminal color settings
 set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*:Tc"
 
 # default shell
 set -g default-shell /usr/bin/zsh
